<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawercontent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialpgpadding" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layers"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spmixtype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alpha" />

    <SeekBar
        android:id="@+id/sblayeralpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <CheckBox
            android:id="@+id/cbsampleall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sampleall" />

        <CheckBox
            android:id="@+id/cblockalpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lockalpha" />
    </LinearLayout>

    <com.mobeta.android.dslv.DragSortListView
        android:id="@+id/lstlayers"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

    </com.mobeta.android.dslv.DragSortListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btnadd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add"
            android:src="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/btnremove"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/remove"
            android:src="@android:drawable/ic_menu_delete" />

        <ImageButton
            android:id="@+id/btneditname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/rename"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/btnduplicate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/duplicatelayer"
            android:src="@drawable/ic_menu_duplicate" />

        <ImageButton
            android:id="@+id/btnmergedown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/mergedownlayer"
            android:src="@drawable/ic_menu_mergedown" />

    </LinearLayout>

</LinearLayout>
